test/negative/clafertransitionconstraint06.cfr
// Test for negative clafer constraint

a
 xor b ?
  	c -[]-> 
  	d 
  	e 




